finished custom_emu

--- a/custom_emu/Makefile
+++ b/custom_emu/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
-CFLAGS=-Wall -g -no-pie -DDEBUG	# for debugging
-# CFLAGS=-Wall -s -no-pie	# for final version
+#CFLAGS=-Wall -g -no-pie -DDEBUG	# for debugging
+CFLAGS=-Wall -s -no-pie	# for final version
 
 all:
 	$(CC) $(CFLAGS) -o chall emulator.c
