added judge script to shellcoding challenge

--- a/shellcoding_hard/Makefile
+++ b/shellcoding_hard/Makefile
@@ -1,5 +1,6 @@
 CC=gcc
-CFLAGS=-Wall -g -DDEBUG
+CFLAGS=-Wall
+#CFLAGS=-Wall -g -DDEBUG	# for debugging
 
 all:
 	$(CC) $(CFLAGS) -o driver driver.c -lseccomp
